# MikuMikuWorld

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.ja.md  README.md
.docker/: Dockerfile.linux-render  Dockerfile.linux-runner
.github/: release-drafter.yml
.github/workflows/: build.yml  pr-labeler.yml  release-drafter.yml  release.yml
MikuMikuWorld/: Application.cpp  Application.h  ApplicationConfiguration.cpp  ApplicationConfiguration.h  Background.cpp  BinaryReader.cpp  BinaryReader.h  BinaryWriter.cpp  BinaryWriter.h  Colors.h  Constants.h  DefaultLanguage.h  File.cpp  File.h  IO.cpp  IO.h  ImGuiManager.cpp  InputBinding.cpp  Jacket.cpp  Jacket.h  JsonIO.h  MathUtils.cpp  MathUtils.h  MinMax.cpp  MinMax.h  Note.h  NotesPreset.cpp  NotesPreset.h  OfflineRenderer.cpp  OfflineRenderer.h  OpenGlLoader.cpp  Particle.cpp  Particle.h  PreviewData.h  PreviewEngine.h  ResourceManager.cpp  ScoreContext.h  ScoreEditor.cpp  ScoreEditorTimeline.cpp  ScoreEditorTimeline.h  (+15 more)
MikuMikuWorld/Audio/: AudioManager.cpp  AudioManager.h  Sound.cpp  Sound.h  Waveform.h
MikuMikuWorld/Platform/: HeadlessGL.h  Paths.h
MikuMikuWorld/Platform/Cocoa/: FileDialog.mm  HeadlessGL.cpp  Info.plist.in  Locale.mm  MessageBox.mm  Paths.cpp
MikuMikuWorld/Platform/Linux/: FileDialog.cpp  HeadlessGL.cpp  Locale.cpp  MessageBox.cpp  Paths.cpp
MikuMikuWorld/Platform/Stubs/: sal.h
MikuMikuWorld/Preview/: Overlay.cpp  Overlay.h  OverlayAssets.cpp  OverlayAssets.h  OverlayText.cpp  OverlayText.h  VideoPlayer.cpp  VideoPlayer.h
MikuMikuWorld/Rendering/: Camera.h  Renderer.h  Shader.cpp
MikuMikuWorld/res/: mmw_icon.icns
MikuMikuWorld/res/i18n/: ja.csv  zh-tw.csv
MikuMikuWorld/res/shaders/: text.frag  text.vert
docs/mac-port/: decisions.md  inventory.md
patches/: glfw-cocoa-ime.patch
